--- a/src/components/navbar/Navbar.css
+++ b/src/components/navbar/Navbar.css
@@ -19,7 +19,7 @@
 }
 
 .pages-links li:hover {
-  background-color: grey;
+  background-color: royalblue;
 }
 
 .pages-links li a {
@@ -83,5 +83,9 @@
 
   .pages-links.active {
     display: flex;
+  }
+
+  .pages-links:not(.active) {
+    display: none;
   }
 }
